--- a/source/index.html
+++ b/source/index.html
@@ -59,6 +59,7 @@
       </section>             
     </header>
     <main class="page-main">      
+      <h1 class="page-main__title visually-hidden">Информация о приложении PINK</h1> 
       <section class="advantages">
         <h2 class="advantages__main-title">Устали от серости мегаполиса?</h2> 
         <h2 class="advantages__main-title advantages__main-title--last">Нам есть, что вам предложить!</h2>
